--- a/index.html
+++ b/index.html
@@ -1,1 +1,32 @@
-<p/> Nooo <p/>
+<!DOCTYPE html>
+<html>
+<head>
+<title>Page Title</title>
+<style>
+
+body {
+  background-color: black;
+  text-align: center;
+  color: white;
+}
+</style>
+</head>
+<body>
+
+<h1> Jesse's Anime Watchlist </h1> <br>
+<h2 style="text-align:left;"> <u> anime i have watched: </u> </h2><br>
+<img src="https://lh4.padlet.pics/Sn9__LZmmPVLbE9DA8DeONU4_yxu2kTJtpN5-2nsr3wl5wQaGLXcTVT63XqnNlXbkqbEdt9RQ4JLVt1vrPq8uWFDYHZiYHuF=w2632-h1408-nu-rw-e365"style="width:200px;height:300px;">
+<br> The promised neverland: 9/10<br>
+<img src="https://lh4.padlet.pics/wNlUqEl8Kdn121YvH0XTpQPrMZDmlGK2OTIeIPV8uW5Vp9muB8IS7XMaVt1PTM7I3dDW-M0q5p6xyfqj-H6eu5Keh1oSDgl1=w2632-h1408-nu-rw-e365" style="width:300px;height:200px;">
+<br> Black Clover: 9.5/10<br>
+<img src="https://lh4.padlet.pics/oZrn6rjl8lV5SDP5EjoSY74gOFBBJF0fMR7nT7Pvw1TKh9U7dgHHBLfeQKbbnRirHp5xPc4CQnPkoIj2RAMnfr1CD0kNnOdzug=w2632-h1408-nu-rw-e365;" style="width:100;height:300px;">
+<br> Shokugeki No Soma 9/10 <br>
+<img src="https://lh4.padlet.pics/9LPSUuBkZoOiBBkV9swYTM8X1EAR-Hn5g_NcYKMzfrgm7CIWSk7oO_NF-JY1EgGoO5eFFwK9f-EJ8UILTvLLl7FcEVjQZrEJeQ=w2632-h1408-nu-rw-e365">
+<br> Hunter X Hunter 9.5/10 <br>
+<img src="https://lh4.padlet.pics/WOoWn7ZndY-3xx6mo4w_xr3gpAqsQIAf7iP7_nMPwLB8gwWJRMtWHKTd_ALlFx3bRU0u8HaNeM5ijBZwmIeqso1iU4xj5f7mRg=w2632-h1408-nu-rw-e365" style="width:350px;height:200px;">
+<br> No Game No Life 9/10
+<br><br><br><br><br><br>
+I &#128150;all anime
+<p style="font-size:8px"> (Not all I have watched anime listed)</p>
+
+</body>
