--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
-<head>
-    	<h1>My First Heading</h1>
-   	<p>My first paragraph.</p>
-  </body>
+<body>
+    	<u><h1>My First Heading</h1></u>
+    	<b><p>My first paragraph.</p></b>
+</body>
 </html>
