--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <body>
-    	<u><h1>My First Heading</h1></u>
-    	<b><p>My first paragraph.</p></b>
-        <p><a href="https://www.youtube.com/">Youtube</a></p>
-    
+    	<u><h1>Welcome to my page</h1></u>
+    	<b><p>My name is Jesse.</p></b>
+        <p><a href="https://www.youtube.com/watch?v=Db4THOCexbI">Fish Girl</a></p>
+    <p><iframe width="560" height="315" src="https://www.youtube.com/embed/Db4THOCexbI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
 </body>
 </html>
