--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+<img src="file:///Users/jgeoghan/Downloads/favicon.ico">
 <body bgcolor="000000">
     <u><h1><font color="blue">Welcome to my page</font></h1></u>
     <b><p><font color="white">My name is Jesse.</font></p></b>
